--- a/trunk/Paint_Design/MainWindow.xaml
+++ b/trunk/Paint_Design/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Paint_Design.MainWindow"
         Title="MyPaint" x:Name="main" Height="700" Width="1288.5" Background="#FF8F8B8B" WindowStartupLocation="CenterScreen" Icon="but.jpg" SizeChanged="main_SizeChanged"
         Closing="main_Closing">
-    <ScrollViewer Name="SCW" VerticalScrollBarVisibility="Hidden" Padding="2" HorizontalScrollBarVisibility="Disabled">
+    <ScrollViewer Name="SCW" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled">
         <Grid Margin="0" MouseMove="Mycanvas_Mouse_Move" ScrollViewer.CanContentScroll="False"
               MouseLeftButtonUp="Mycanvas_Mouse_Up"
 			MinWidth="700" MinHeight="500" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" >
@@ -160,8 +160,8 @@
                 </ListBox>
             </StackPanel>
             <StatusBar Margin="2,0.639,3,5" Grid.Row="1" x:Name="Status_bar">
-                <StatusBarItem Width="76.5" HorizontalAlignment="Left" Margin="0,1">
-                    <TextBlock Name="statusbar" Height="18.96" Width="69.933" VerticalAlignment="Center" TextAlignment="Center"><Run Text="Ready"/></TextBlock>
+                <StatusBarItem Width="186" HorizontalAlignment="Left" Margin="0,1">
+                    <TextBlock Name="statusbar" Height="19" Width="176" VerticalAlignment="Center" TextAlignment="Center"><Run Text="Ready"/></TextBlock>
                 </StatusBarItem>
                 <StatusBarItem x:Name="MousePosition" Height="39" VerticalAlignment="Top" Width="1066"/>
             </StatusBar>
@@ -170,7 +170,7 @@
 					Background="White" x:Name="MyCanvas" MouseMove="Mycanvas_Mouse_Move"
 					MouseLeftButtonDown="Mycanvas_Mouse_Down"
 					MouseLeftButtonUp="Mycanvas_Mouse_Up"
-					Cursor="Cross"
+					Cursor="Pen"
 					ScrollViewer.CanContentScroll="False" Margin="0,0,3,3" ClipToBounds="True"
 		>
                     <Canvas.ContextMenu>
@@ -186,7 +186,7 @@
 						Fill="White"
 						StrokeDashArray="3 2"
 						Stroke="Blue"                
-						StrokeThickness="1" Cursor="SizeAll"
+						StrokeThickness="1"
                 >
 
                     </Rectangle>
@@ -196,16 +196,16 @@
                        />
                     <Image>
                         <Image.ContextMenu>
-                    <ContextMenu Name="imgContext">
-                        <MenuItem Header="Copy" Click="Copy_Click"/>
+                            <ContextMenu Name="imgContext">
+                                <MenuItem Header="Copy" Click="Copy_Click"/>
                                 <MenuItem Header="Delete" Command="ApplicationCommands.Delete">
                                     <MenuItem.CommandBindings>
                                         <CommandBinding Command="ApplicationCommands.Delete"  CanExecute="del_CommandBinding_CanExecute" Executed="del_CommandBinding_Executed"/>
                                     </MenuItem.CommandBindings>
                                 </MenuItem>
-                         <MenuItem Header="Paste" Click="Paste_Click"/>
-                     </ContextMenu>
-                     </Image.ContextMenu>
+                                <MenuItem Header="Paste" Click="Paste_Click"/>
+                            </ContextMenu>
+                        </Image.ContextMenu>
                     </Image>
                 </Canvas>
             </ScrollViewer>
